--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "start": "node server.js"
   },
   "dependencies": {
-    "express": "4.13.3"
+    "body-parser": "^1.19.0",
+    "express": "^4.13.3"
   },
   "author": "Anusha Datar",
   "license": "GPL"
